# assimp2libgdx

./: .gitmodules  CMakeLists.txt  LICENSE  Readme.md
assimp2json/: json_exporter.cpp
assimp2libgdx/: json_exporter.cpp  main.cpp  version.h  version.h.in
test/: CMakeLists.txt  models
test/outputs/Collada/: cube_triangulate.g3dj  duck.g3dj
test/viewer/: build.gradle
test/viewer/core/src/com/assimp2libgdx/viewer/: ModelViewer.java  ViewerFileHandleResolver.java
test/viewer/desktop/: build.gradle
test/viewer/desktop/src/com/assimp2libgdx/viewer/desktop/: DesktopLauncher.java
test/viewer/gradle/wrapper/: gradle-wrapper.properties
